# 2022_SummerVac

./: .gitignore  README.md
HW/HW3/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hw3.cpp
HW/HW4/: A.txt  B.txt  CMakeLists.txt  hw4.cpp
HW/HW5/: CMakeLists.txt  hw5_1.cpp  hw5_2.cpp  main.cpp
HW/HW5/src/: CMakeLists.txt  hw5_1.cpp  hw5_2.cpp
HW/HW5/src/src_header/: hw5_1.h  hw5_2.h
HW/HW6/: CMakeLists.txt  main.cpp
HW/HW6/Car/: CMakeLists.txt  car.cpp
HW/HW6/Car/car_header/: car.h
HW/HW6/Engine/: CMakeLists.txt  engine.cpp
HW/HW6/Engine/engine_header/: engine.h
HW/HW7/: CMakeLists.txt  main.cpp
HW/HW7/question_7a/: CMakeLists.txt  question_7a.h
HW/HW7/question_7b/: CMakeLists.txt  question_7b.h
HW/HW7/question_7c/: CMakeLists.txt  question_7c.h
HW/HW8/: CMakeLists.txt  main.cpp
HW/HW8/Inserter/: CMakeLists.txt  back_inserter.h
HW/HW8/Tuple_printer/: CMakeLists.txt  tuple_printer.h
HW/HW9/: CMakeLists.txt  main.cpp
HW/HW9/POD/: CMakeLists.txt  trade_date.cpp
HW/HW9/POD/trade_date_header/: trade_date.h
HW_hard/Problem_1/: a.out  mylib.cpp  mylib.hpp
HW_hard/Problem_hard_1/: CMakeLists.txt  main.cpp
algoTest/DC3/: CMakeLists.txt  dc3.cpp
algoTest/SAIS/: CMakeLists.txt  sais.cpp
